--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Basic app write with express, nodejs and using MongoDb for storage.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "env-cmd -f ./test.env jest",
     "start": "node server.js",
     "dev": "nodemon server.js"
+  },
+  "jtest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -17,14 +20,17 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
     "mongoose-sequence": "^5.3.1",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "env-cmd": "^10.1.0",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
